[gd_scene load_steps=10 format=3 uid="uid://d3qd21rqjgm1c"]

[ext_resource type="Script" path="res://Scenes/Charakters/Tank.gd" id="1_auaug"]
[ext_resource type="Texture2D" uid="uid://natgx5kvjh3w" path="res://Assets/CharakterAssets/Charakters/Tank/Oxbear-outline1.png" id="2_opvt7"]
[ext_resource type="Texture2D" uid="uid://dv7vcvyngarr3" path="res://Assets/CharakterAssets/Charakters/Tank/Oxbear-outline2.png" id="3_kri00"]
[ext_resource type="Texture2D" uid="uid://450u8515d8wk" path="res://Assets/CharakterAssets/Charakters/Tank/Oxbear-outline3.png" id="4_j6u4u"]
[ext_resource type="Texture2D" uid="uid://ciy2adiyt5onh" path="res://Assets/CharakterAssets/Charakters/Tank/Oxbear-outline4.png" id="5_fre4s"]
[ext_resource type="Texture2D" uid="uid://bymyd4t024y0o" path="res://Assets/UI/RandIndic.png" id="6_2oorg"]

[sub_resource type="Curve2D" id="Curve2D_56h4u"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 12, -6, 0, 0, 0, 0, -25, -49, 0, 0, 0, 0, -82, -79, 0, 0, 0, 0, -157, -84, 0, 0, 0, 0, -219, -68, 0, 0, 0, 0, -252, -49, 0, 0, 0, 0, -274, -24, 0, 0, 0, 0, -292, 14, 0, 0, 0, 0, -296, 51, 0, 0, 0, 0, -286, 93, 0, 0, 0, 0, -253, 119, 0, 0, 0, 0, -206, 141, 0, 0, 0, 0, -122, 157, 0, 0, 0, 0, -53, 145, 0, 0, 0, 0, -6, 120, 0, 0, 0, 0, 16, 92, 0, 0, 0, 0, 28, 46, 0, 0, 0, 0, 12, -5, 0, 0, 0, 0, 12, -6)
}
point_count = 19

[sub_resource type="SpriteFrames" id="SpriteFrames_sbv2r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_opvt7")
}, {
"duration": 1.0,
"texture": ExtResource("3_kri00")
}, {
"duration": 1.0,
"texture": ExtResource("4_j6u4u")
}, {
"duration": 1.0,
"texture": ExtResource("5_fre4s")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_6iu03"]
radius = 22.893

[node name="Node2D" type="Node2D"]
position = Vector2(-1, 0)
script = ExtResource("1_auaug")

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(4.06172, 0)
scale = Vector2(0.854938, 1)
curve = SubResource("Curve2D_56h4u")

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2(12, -6)
rotation = -2.28133
rotates = false

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Path2D/PathFollow2D"]
position = Vector2(0.244873, -0.284585)
rotation = 2.28133
scale = Vector2(1.49865, 1.28125)
sprite_frames = SubResource("SpriteFrames_sbv2r")
autoplay = "default"
frame_progress = 0.57072

[node name="Area2D" type="Area2D" parent="Path2D/PathFollow2D/AnimatedSprite2D"]
position = Vector2(23.1408, -14.715)
rotation = 0.102087
scale = Vector2(1.26625, 1.42004)
skew = -0.0273489

[node name="RangeIndicator" type="Sprite2D" parent="Path2D/PathFollow2D/AnimatedSprite2D/Area2D"]
position = Vector2(-17.3912, 10.8509)
scale = Vector2(0.119669, 0.108036)
texture = ExtResource("6_2oorg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Path2D/PathFollow2D/AnimatedSprite2D/Area2D"]
position = Vector2(-17.3629, 11.9737)
shape = SubResource("CircleShape2D_6iu03")

[connection signal="body_entered" from="Path2D/PathFollow2D/AnimatedSprite2D/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="mouse_entered" from="Path2D/PathFollow2D/AnimatedSprite2D/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Path2D/PathFollow2D/AnimatedSprite2D/Area2D" to="." method="_on_area_2d_mouse_exited"]
